--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,5 +1,5 @@
 .contact {
-    background: #f9f9f9;
+    background: #23153c;
     padding: 4rem 2rem;
     text-align: center;
   }
@@ -7,11 +7,11 @@
   .contact h2 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
-    color: #222;
+    color: #ffffff;
   }
   
   .contact p {
-    color: #555;
+    color: #ffffff;
     margin-bottom: 2rem;
     font-size: 1.1rem;
   }
@@ -24,7 +24,7 @@
   
   .contact-icons a {
     font-size: 2.5rem;
-    color: #333;
+    color: #ffffff;
     transition: color 0.3s ease, transform 0.3s ease;
   }
   
