--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -51,7 +51,7 @@
   
   .bar-fill {
     height: 100%;
-    background: linear-gradient(to right, #b72b2b, #e7675b);
+    background: linear-gradient(to right, #23153c, #5c4782);
     border-radius: 10px;
     transition: width 0.6s ease;
   }
